--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,38 @@
 }
 
 .container{
-	width:95%;
+	width:100%;
 	display: block;
 	margin:auto 0;
-	margin-left: 1.5%;
+	
+	
+
+}
+
+h1,h2,h3,h4, p {
+	color:#212224;
+	display:block;
+	margin:1em;
+}
+
+h1{
+font-size: 2.6em;
+
+}
+
+
+
+body{}
+
+
+.one, .three{
+	background: #FFF;
+}
+
+.top, .two, .four{
+	background: #3E606F;
+}
+
+a:link{
+	color:#333;
 }
