--- a/css/styles.css
+++ b/css/styles.css
@@ -9,23 +9,36 @@
 	width:100%;
 	display: block;
 	margin:auto 0;
-	
-	
-
-}
-
-h1,h2,h3,h4, p {
-	color:#212224;
-	display:block;
-	margin:1em;
 }
 
 h1{
-font-size: 2.6em;
-
+font-family: 'Oswald', sans-serif;
+font-weight: 700;	
+font-weight: 400;
+line-height: 1.25em;
+font-size: 3.28em; 
+text-transform: uppercase;
+margin: 0 0 23px 0;
 }
 
 
+h2{
+	 font-family: 'Droid Serif', serif;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 1.42em;
+    line-height: 1.1em;
+    margin: 0 0 23px 0;
+}
+
+
+p {
+
+font-family: 'Droid Serif', serif;
+    font-size: 1.05em;
+    line-height: 1.45em;
+    margin: 0 0 23px 0;
+}
 
 body{}
 
