--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,12 @@ a:hover, a:active {
 		top:0;
 		z-index: 1000;
 		width:100%;
+	
 
+	}
+
+	.slicknav_btn{
+		background-color:#334D5C ;
 	}
 
 	.ui.stackable.grid > .row > .wide.column, .ui.stackable.grid > .wide.column, .ui.stackable.grid > .column.grid > .column, .ui.stackable.grid > .column.row > .column, .ui.stackable.grid > .row > .column, .ui.stackable.grid > .column{
