--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,6 @@ font-weight: 400;
 line-height: 1.25em;
 font-size: 3.28em; 
 text-transform: uppercase;
-margin: 0 0 23px 0;
 color:#334D5C;
 }
 
@@ -47,7 +46,8 @@ h2{
     font-style: italic;
     font-size: 1.42em;
     line-height: 1.1em;
-    margin: 0 0 23px 0;
+    margin: 0 0 0 1%;
+    color:#334D5C;
 }
 
 
